port effects